# Maju

./: .gitignore  .gitmodules  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  package-lock.json
.github/workflows/: release.yml
.opencode/skills/ant/: SKILL.md
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/nsis/: kodex-hooks.nsh
apps/desktop/src-tauri/src/: codebuddy_proxy.rs  events.rs  lsp.rs  main.rs  open_workspaces.rs  recent_workspaces.rs  remote_control.rs  remote_control_bridge.rs  remote_control_manager.rs  state.rs
apps/desktop/src-tauri/src/commands/: editor.rs  fs.rs  git.rs  lsp.rs  mod.rs  perf.rs  remote_control.rs  review.rs  search.rs  session.rs  settings.rs  terminal.rs  workspace.rs
apps/desktop/ui/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
apps/mobile/: .gitignore  App.tsx  README.md  VERIFICATION.md  app.config.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
crates/acp-core/: Cargo.toml
crates/acp-core/src/: client.rs  codex_api_proxy.rs  events.rs  lib.rs  mapping.rs  runtime.rs
crates/acp-core/src/codex_api_proxy/: mod.rs  provider.rs  sse.rs  tests.rs
crates/acp-core/src/mapping/: codebuddy.rs  session_config.rs  tests.rs
crates/acp-core/src/mapping/codebuddy/: diff_preview.rs
crates/acp-core/src/mapping/tests/: codebuddy.rs  diff_preview.rs
crates/acp-core/src/runtime/: agent_process.rs  client_handlers.rs  codebuddy.rs  permissions.rs  process.rs  prompt_content.rs  prompt_loop.rs  session_lifecycle.rs  session_titles.rs  shutdown.rs  terminal.rs  tests.rs  tool_stop.rs  workspace_paths.rs
crates/acp-core/src/runtime/agent_process/: mod.rs  process_lifecycle.rs  remote_ssh.rs  tests.rs
crates/acp-core/src/runtime/agent_process/streamable_http/: mod.rs  sse.rs  wire.rs
crates/acp-core/src/runtime/permissions/: broker.rs  shell.rs  tests.rs
crates/acp-core/src/runtime/permissions/shell/: write_paths.rs
crates/app-core/: Cargo.toml
crates/app-core/src/: application.rs  attachment_cache.rs  bootstrap.rs  claude_woa.rs  editor_files.rs  file_tracker.rs  image_api.rs  image_capability.rs  image_mcp.rs  lib.rs  paths.rs  persistence.rs  reducer.rs  remote_bootstrap.rs  remote_control.rs  remote_profiles.rs  remote_ssh.rs  remote_workspace.rs  settings.rs  startup_perf.rs  web_tools.rs  web_tools_mcp.rs  workspace_files.rs
crates/app-core/src/application/: bootstrap.rs  config.rs  diff_utils.rs  events.rs  inline_think.rs  path_utils.rs  prompt_content.rs  prompting.rs  repository.rs  sessions.rs  shell_bridge.rs  tests.rs  titles.rs  tool_diffs.rs  ui_snapshot.rs  update_signal.rs
crates/app-core/src/application/change_sets/: agent_turn.rs  git_worktree.rs  manual.rs  mod.rs  query.rs  review.rs
crates/app-core/src/application/tests/: change_set_tests.rs  diff_tests.rs  image_switch_tests.rs  prompt_tests.rs
crates/app-core/src/settings/: agent_cli.rs  lsp.rs  mod.rs  remote.rs  tests.rs  tests_model_attributes.rs
crates/codebuddy-proxy/: Cargo.toml
crates/codebuddy-proxy/src/: adapter.rs  lib.rs  logging.rs  main.rs  models.rs  openai_types.rs  pending.rs  prompt_builder.rs  server.rs  session_pool.rs  usage.rs
crates/codebuddy-proxy/tests/: e2e.rs
crates/codebuddy-sdk/: Cargo.toml
crates/codebuddy-sdk/src/: binary.rs  error.rs  lib.rs  options.rs  query.rs  session.rs
crates/codebuddy-sdk/src/mcp/: mod.rs  server.rs  transport.rs
crates/codebuddy-sdk/src/protocol/: envelope.rs  messages.rs  mod.rs
crates/codebuddy-sdk/src/transport/: mod.rs  subprocess.rs
crates/codebuddy-sdk/tests/: mock_cli.rs
crates/git-service/: Cargo.toml
crates/git-service/src/: lib.rs
crates/relay-client/: Cargo.toml
crates/relay-client/src/: binding.rs  connection.rs  crypto.rs  driver.rs  identity.rs  lib.rs  pairing.rs
crates/relay-protocol/: Cargo.toml
crates/relay-protocol/src/: control.rs  envelope.rs  events.rs  lib.rs  pairing.rs
crates/session-store/: Cargo.toml
crates/session-store/src/: lib.rs
crates/session-store/src/session_store/: codec.rs  legacy.rs  mod.rs  tests.rs  util.rs
crates/terminal-service/: Cargo.toml
crates/terminal-service/src/: lib.rs
crates/workspace-model/: Cargo.toml
crates/workspace-model/src/: lib.rs
docs/: architecture.md  editor-subsystem-design.md  ioa-env-detect-implementation.md  technical-debt-roadmap.md
kodex-claude/: .gitignore  README.md  package-lock.json  package.json
kodex-claude/docs/: woa-auth-integration-plan.md
kodex-claude/scripts/: build-sea.mjs
kodex-claude/src/: acp-agent.ts  acp-notifications.ts  acp-runner.ts  acp-server.ts  claude-cli.ts  index.ts  lib.ts  model-options.ts  permission-utils.ts  session-title.ts  tools.ts  utils.ts
kodex-claude/src/tests/: acp-agent-settings.test.ts  acp-agent.test.ts  authorization.test.ts  create-session-options.test.ts  session-config-options.test.ts  tools.test.ts  woa-auth.test.ts  woa-config.test.ts  woa-headers.test.ts  woa-token.test.ts
kodex-claude/src/woa/: auth.ts  cli.ts  config.ts  error.ts  headers.ts  index.ts  token.ts
kodex-codebuddy/: .gitignore  README.md  e2e-test.mjs  package-lock.json  package.json  tsconfig.json
kodex-codebuddy/scripts/: build-sea.mjs
kodex-codebuddy/src/: auth.ts  codebuddy-adapter.ts  codebuddy-models.ts  config.ts  index.ts  logger.ts  openai-types.ts  prompt-builder.test.ts  prompt-builder.ts  server.ts  session-pool.ts
openspec/changes/add-session-steer-support/: design.md  proposal.md  tasks.md
server/: Cargo.toml  README.md
server/migrations/: 0001_devices.sql  0002_pairing_codes.sql  0003_pairings.sql  0004_accounts.sql  0005_subscriptions.sql
server/src/: auth.rs  binding.rs  config.rs  connections.rs  db.rs  errors.rs  health.rs  lib.rs  main.rs  pairing.rs  ratelimit.rs  routing.rs  session.rs  state.rs  subscription.rs  transport.rs  wire.rs
tools/mock-acp-agent/: Cargo.toml
(+205 files in other folders)
