[workspace]
members = [
    "apps/desktop/src-tauri",
    "crates/acp-core",
    "crates/app-core",
    "crates/git-service",
    "crates/session-store",
    "crates/terminal-service",
    "crates/workspace-model",
    "tools/mock-acp-agent",
]
exclude = ["codex-acp"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
agent-client-protocol = { version = "0.11.1", features = ["unstable_session_model", "unstable_session_usage"] }
agent-client-protocol-tokio = "0.11.1"
anyhow = "1.0"
futures = "0.3"
git2 = { version = "0.20", default-features = false }
portable-pty = "0.9"
bytes = "1.11"
http-body-util = "0.1"
hyper = { version = "1.9", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
libc = "0.2"
reqwest = { version = "0.13", features = ["form", "json", "multipart", "stream"] }
shell-words = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.23"
thiserror = "2.0"
tokio = { version = "1.48", features = ["rt", "sync", "time", "net"] }
tokio-util = { version = "0.7", features = ["compat"] }
toml_edit = "0.22"
rusqlite = { version = "0.34", features = ["bundled"] }
similar = "2.7"
uuid = { version = "1.18", features = ["v4", "serde"] }
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_JobObjects", "Win32_System_Threading"] }
