[package]
name = "app-core"
version = "0.1.0"
edition = "2024"

[dependencies]
acp-core = { path = "../acp-core" }
anyhow.workspace = true
dirs-next = "2.0"
git-service = { path = "../git-service" }
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
shell-words.workspace = true
similar.workspace = true
session-store = { path = "../session-store" }
tokio.workspace = true
toml_edit.workspace = true
uuid.workspace = true
workspace-model = { path = "../workspace-model" }

[dev-dependencies]
filetime = "0.2"
git2.workspace = true
tempfile.workspace = true
