[package]
name = "codebuddy-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "OpenAI-compatible HTTP proxy for CodeBuddy, backed by the codebuddy-sdk crate. Behavior parity with the TypeScript kodex-codebuddy service."

[[bin]]
name = "codebuddy-proxy"
path = "src/main.rs"

[dependencies]
codebuddy-sdk = { path = "../codebuddy-sdk" }
anyhow.workspace = true
bytes.workspace = true
http-body-util.workspace = true
hyper = { workspace = true, features = ["server", "http1"] }
hyper-util = { workspace = true, features = ["tokio"] }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "sync", "macros", "time", "net", "io-util", "signal"] }
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
reqwest = { workspace = true }
