[package]
name = "relay-client"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Outbound-only relay client for kodex mobile remote control: device identity, pairing, E2E framing, and control-request routing."

[dependencies]
relay-protocol = { path = "../relay-protocol" }
workspace-model = { path = "../workspace-model" }
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt", "sync", "time", "macros", "io-util"] }
tokio-tungstenite = { version = "0.27", features = ["rustls-tls-native-roots"] }
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
chacha20poly1305 = "0.10"
hkdf = "0.12"
hmac = "0.12"
sha2 = "0.10"
rand_core = { version = "0.6", features = ["std"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
base64 = "0.22"

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "time", "net", "io-util", "sync"] }
tempfile = "3"
