[package]
name = "relay-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Transport-agnostic wire contract shared by the kodex PC control gateway, the public relay, and the phone companion app."

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
workspace-model = { path = "../workspace-model" }

[dev-dependencies]
