[package]
name = "session-store"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
rusqlite = { version = "0.34", features = ["bundled"] }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
workspace-model = { path = "../workspace-model" }

[dev-dependencies]
tempfile.workspace = true
