[package]
name = "terminal-service"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
portable-pty.workspace = true
serde.workspace = true
uuid.workspace = true
workspace-model = { path = "../workspace-model" }

[dev-dependencies]
tempfile.workspace = true
