[package]
name = "kodex-desktop"
 version = "0.1.5"
edition = "2024"

[dependencies]
acp-core = { path = "../../../crates/acp-core" }
codebuddy-proxy = { path = "../../../crates/codebuddy-proxy" }
anyhow.workspace = true
app-core = { path = "../../../crates/app-core" }
git-service = { path = "../../../crates/git-service" }
serde.workspace = true
serde_json.workspace = true
session-store = { path = "../../../crates/session-store" }
tauri = { version = "2", features = ["protocol-asset"] }
git2.workspace = true
libc.workspace = true
terminal-service = { path = "../../../crates/terminal-service" }
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tokio.workspace = true
uuid.workspace = true
workspace-model = { path = "../../../crates/workspace-model" }

[build-dependencies]
tauri-build = { version = "2", features = [] }
